2005-01-03  Dan Winship  <danw@novell.com>

	* configure.in: Remove redundant check for ngettext, since
	AM_GLIB_GNU_GETTEXT already checks for it (in both libc and
	libintl).
	
2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "zu" to ALL_LINGUAS.

2004-11-28  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.

2004-11-01  Jeff Waugh  <jdub@perkypants.org>

	* po/POTFILES.in, vfs-methods/fontilus/Makefile.am,
	  vfs-methods/fontilus/gnome-font-viewer.desktop.in,
	  vfs-methods/fontilus/.cvsignore: Add a .desktop file for the
	  font viewer, need it for the MIME loving. D'oh!

2004-10-14  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-10-08  Christophe Fergeau  <teuf@gnome.org>

	* gnome-settings-daemon/actions/Makefile.am: switch ALSA_LIBS and 
	  GST_LIBS order in libacme_la_LIBADD, fixes some libtool link
	  issues on Debian.

Tue Sep 14 17:50:56 2004  Jonathan Blandford  <jrb@redhat.com>

	* configure.in:
	* NEWS: Release 2.8.0

2004-09-03  Jody Goldberg <jody@gnome.org>

	* gnome-settings-daemon/gnome-settings-keyboard-xkb.c : revert
	  unintended string change

2004-08-31  Jody Goldberg <jody@gnome.org>

	* capplets/common/gconf-property-editor.c
	(peditor_numeric_range_widget_changed) : tracked the long running
	  irrtation about 'expecting int received float'.  Running without a
	  schema would default the value to float.  12 of 13 callers had ints
	  so I have changed the default and added a warning.

Sun Aug 29 22:37:00 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: post release bump.

Sun Aug 29 21:55:09 2004  Jonathan Blandford  <jrb@gnome.org>

	* NEWS: Release 2.7.1

2004-07-23  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=148291
	* configure.in : typo

2004-06-07  Jody Goldberg <jody@gnome.org>
