@@ -1,3 +1,9 @@
+2005-01-04  Shakti Sen <shprasad@novell.com>
+
+	* theme-thumbnailer.c (main): Added the full path of the theme
+	so that it will create the thumbnail.
+	Fixes bug #153203
+	
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
